--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
-Your name <Your email>
-Your colaborator's name <Your colaborators email>
+ colaborators
+
+David Mwape <d.mwape@alustudent.com>
+Aubin Ntwali <a.ntwali@alustudent.com>
+
